--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "odseli.js",
+  "name": "odesli.js",
   "version": "1.0.0",
-  "description": "Node.js Client to query Odseli.co (song.link/album.link) API",
-  "main": "index.js",
+  "description": "Node.js Client to query odesli.co (song.link/album.link) API",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,13 +18,13 @@
     "album.link",
     "albumlink"
   ],
-  "author": "Mattr",
+  "author": "Mattr <me@mtri.gg>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MattrAus/odesli.js/issues"
   },
   "dependencies": {
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^2.6.1"
   },
   "homepage": "https://github.com/MattrAus/odesli.js#readme"
 }
