--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "album.link",
     "albumlink"
   ],
-  "author": "Mattr <me@mtri.gg>",
+  "author": "Mattr <me@mtr.gg>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MattrAus/odesli.js/issues"
