--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
   "name": "odesli.js",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Node.js Client to query odesli.co (song.link/album.link) API",
   "main": "lib/index.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/index.d.ts",
+      "import": "./lib/index.js",
+      "require": "./lib/index.js"
+    }
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "docs": "jsdoc lib/index.js -d docs",
+    "audit": "npm audit",
+    "audit:fix": "npm audit fix",
+    "security": "npm audit && snyk test",
+    "prepublishOnly": "npm run build && npm test"
   },
   "repository": {
     "type": "git",
@@ -16,7 +40,13 @@
     "song.link",
     "songlink",
     "album.link",
-    "albumlink"
+    "albumlink",
+    "music",
+    "streaming",
+    "api",
+    "spotify",
+    "apple-music",
+    "youtube-music"
   ],
   "author": "Mattr <me@mtr.gg>",
   "license": "ISC",
@@ -24,7 +54,24 @@
     "url": "https://github.com/MattrAus/odesli.js/issues"
   },
   "dependencies": {
+    "@types/node": "^24.0.3",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/prettier": "^2.7.3",
+    "eslint": "^8.45.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.5.0",
+    "jsdoc": "^4.0.2",
+    "prettier": "^3.0.0",
+    "snyk": "^1.1234.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0"
   },
   "homepage": "https://github.com/MattrAus/odesli.js#readme"
 }
