--- a/package.json
+++ b/package.json
@@ -58,13 +58,17 @@
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/eslint-plugin-prettier": "^3.1.3",
     "@types/jest": "^29.5.0",
     "@types/prettier": "^2.7.3",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
