fix: use dedicated GH_PACKAGES_TOKEN for GitHub Packages publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,4 +82,4 @@ jobs:
       - name: Publish to GitHub Packages
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
