--- a/.github/workflows/github-packages.yml
+++ b/.github/workflows/github-packages.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Update package name for GitHub Packages
+        run: npm pkg set name="@mattraus/odesli.js"
+
       - name: Publish to GitHub Packages
         run: npm publish
         env:
