--- a/.github/workflows/publish-github-packages.yml
+++ b/.github/workflows/publish-github-packages.yml
@@ -1,14 +1,11 @@
 name: Publish to GitHub Packages
 
 on:
-  push:
-    tags:
-      - 'v*'
-    branches: [master]
-  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
-  publish:
+  publish-github:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -17,6 +14,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: master
 
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -47,4 +46,4 @@ jobs:
       - name: Publish to GitHub Packages
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }} 
