--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "@mattraus/odesli.js",
-  "version": "1.1.2",
+  "version": "1.3.0",
   "description": "Node.js Client to query odesli.co (song.link/album.link) API",
   "main": "lib/index.js",
-  "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "exports": {
     ".": {
-      "types": "./lib/index.d.ts",
-      "import": "./lib/index.js",
-      "require": "./lib/index.js"
+      "require": "./lib/index.js",
+      "import": "./lib/index.mjs",
+      "types": "./lib/index.d.ts"
+    },
+    "./rate-limiter": {
+      "require": "./lib/rate-limiter.js",
+      "import": "./lib/rate-limiter.mjs"
+    },
+    "./metrics": {
+      "require": "./lib/metrics.js",
+      "import": "./lib/metrics.mjs"
+    },
+    "./plugin-system": {
+      "require": "./lib/plugin-system.js",
+      "import": "./lib/plugin-system.mjs"
     }
   },
   "engines": {
@@ -71,6 +82,7 @@
     "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-promise": "^6.6.0",
     "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "jsdoc": "^4.0.2",
     "prettier": "^3.0.0",
     "snyk": "^1.1234.0",
