--- a/package.json
+++ b/package.json
@@ -77,5 +77,8 @@
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
-  "homepage": "https://github.com/MattrAus/odesli.js#readme"
+  "homepage": "https://github.com/MattrAus/odesli.js#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
