--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-promise": "^6.6.0",
     "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "jsdoc": "^4.0.2",
     "prettier": "^3.0.0",
     "snyk": "^1.1234.0",
