--- a/package.json
+++ b/package.json
@@ -78,8 +78,5 @@
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
-  "homepage": "https://github.com/MattrAus/odesli.js#readme",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  }
+  "homepage": "https://github.com/MattrAus/odesli.js#readme"
 }
