chore: update Dependabot configuration to ignore major updates for specific dependencies
- Added rules to .github/dependabot.yml to ignore major updates for 'eslint-plugin-promise' and 'node-fetch' to prevent compatibility issues.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -43,6 +43,11 @@ updates:
         update-types: ['version-update:semver-major']
       - dependency-name: 'eslint'
         update-types: ['version-update:semver-major']
+      # Ignore major updates that break compatibility
+      - dependency-name: 'eslint-plugin-promise'
+        update-types: ['version-update:semver-major']
+      - dependency-name: 'node-fetch'
+        update-types: ['version-update:semver-major']
 
     # Rebase strategy
     rebase-strategy: 'auto'
