--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,4 +1,4 @@
-name: Dependabot Auto Merge & Release
+name: Dependabot Auto Merge
 
 on:
   pull_request:
@@ -11,7 +11,6 @@ permissions:
   packages: write
 
 jobs:
-  # Auto-approve and merge Dependabot PRs that pass tests
   dependabot-auto-merge:
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
@@ -21,6 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -69,8 +69,8 @@ jobs:
               merge_method: 'squash'
             })
 
-  # Trigger release after Dependabot PR is merged
-  trigger-release:
+  # Auto-release after Dependabot PR is merged
+  auto-release:
     runs-on: ubuntu-latest
     needs: dependabot-auto-merge
     if: github.actor == 'dependabot[bot]' && github.event.pull_request.merged == true
@@ -90,23 +90,30 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Determine version bump
+      - name: Bump version
         id: version
         run: |
-          # Check if any production dependencies were updated
-          if npm ls --depth=0 | grep -q "WARN"; then
-            echo "bump=patch" >> $GITHUB_OUTPUT
-          else
-            echo "bump=patch" >> $GITHUB_OUTPUT
-          fi
+          npm run version:patch
+          VERSION=$(node -p "require('./package.json').version")
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Create git tag
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add package.json
+          git commit -m "chore: bump version to $VERSION"
+          git tag "v$VERSION"
+          git push origin HEAD:master --tags
 
       - name: Create Release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ steps.version.outputs.bump }}
-          release_name: Release v${{ steps.version.outputs.bump }}
+          tag_name: v${{ steps.version.outputs.version }}
+          release_name: Release v${{ steps.version.outputs.version }}
           body: |
             ## 🔄 Dependabot Update
 
